--- a/wear/src/main/res/layout/tapping_gesture_p2_ok.xml
+++ b/wear/src/main/res/layout/tapping_gesture_p2_ok.xml
@@ -14,7 +14,7 @@
         android:id="@+id/P2ok"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/P2ok"
+        android:text="@string/p2ok"
         android:textColor="@color/green"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="0dp"
