--- a/wear/src/main/res/layout/tapping_gesture_p2_ok.xml
+++ b/wear/src/main/res/layout/tapping_gesture_p2_ok.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".tapping_gesture.TappingGestureActivityAlarme"
+    tools:context=".tapping_gesture.activity.TappingGestureActivityAlarme"
     tools:deviceIds="wear"
     android:background="@color/black"
     >
