--- a/wear/src/main/res/layout/send_message_view.xml
+++ b/wear/src/main/res/layout/send_message_view.xml
@@ -14,8 +14,28 @@
         android:text="send message"
         android:textSize="30dp"
         android:textColor="@color/dark_red"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:id="@+id/textView2" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="To FMS"
+        android:id="@+id/toFms"
+        android:layout_marginTop="108dp"
+        android:onClick="sendMessageToFMS"
+        android:layout_alignTop="@+id/textView2"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="104dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="To P2"
+        android:id="@+id/toP2"
+        android:onClick="sendMessageToP2"
+        android:layout_alignTop="@+id/toFms"
+        android:layout_toStartOf="@+id/toFms" />
 
 
 </RelativeLayout>
