--- a/wear/src/main/res/layout/tapping_gesture_alarme.xml
+++ b/wear/src/main/res/layout/tapping_gesture_alarme.xml
@@ -23,7 +23,7 @@
         />
 
     <Button
-        android:id="@+id/buttonNo"
+        android:id="@+id/buttonStop"
         android:text="Stop alarm"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -49,7 +49,7 @@
 
 
     <Button
-        android:id="@+id/buttonTaping"
+        android:id="@+id/buttonTapingAlarme"
         android:text="finger"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
