--- a/wear/src/main/res/layout/tapping_gesture_areuok.xml
+++ b/wear/src/main/res/layout/tapping_gesture_areuok.xml
@@ -58,7 +58,7 @@
 
     <Button
         android:id="@+id/buttonTapingAreUok"
-        android:text="finger"
+        android:text=""
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
