--- a/wear/src/main/res/drawable/button_tapping.xml
+++ b/wear/src/main/res/drawable/button_tapping.xml
@@ -3,5 +3,5 @@
 android:shape="rectangle">
 
 <corners android:radius="100dp" />
-<stroke android:width="5px" android:color="@color/green" />
+<stroke android:width="1px" android:color="@color/circular_button_disabled" />
 </shape>
