--- a/wear/src/main/res/layout/resting_view.xml
+++ b/wear/src/main/res/layout/resting_view.xml
@@ -13,7 +13,7 @@
         android:gravity="center"
         android:text="Resting mode"
         android:textSize="30dp"
-        android:textColor="@color/green"
+        android:textColor="@color/blue"
         android:layout_centerInParent="true"/>
 
 
