--- a/wear/src/main/res/layout/send_message_view.xml
+++ b/wear/src/main/res/layout/send_message_view.xml
@@ -9,8 +9,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
-        android:gravity="center"
+        android:layout_marginTop="80dp"
+        android:gravity="center_horizontal"
         android:text="send message"
         android:textSize="30dp"
         android:textColor="@color/dark_red"
@@ -22,11 +22,12 @@
         android:layout_height="wrap_content"
         android:text="To FMS"
         android:id="@+id/toFms"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="50dp"
         android:onClick="sendMessageToFMS"
+        android:layout_marginLeft="35dp"
         android:layout_alignTop="@+id/textView2"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="104dp" />
+         />
 
     <Button
         android:layout_width="wrap_content"
@@ -35,7 +36,8 @@
         android:id="@+id/toP2"
         android:onClick="sendMessageToP2"
         android:layout_alignTop="@+id/toFms"
-        android:layout_toStartOf="@+id/toFms" />
+        android:layout_toStartOf="@+id/toFms"
+     />
 
 
 </RelativeLayout>
