--- a/wear/src/main/res/layout/tapping_gesture_alarme.xml
+++ b/wear/src/main/res/layout/tapping_gesture_alarme.xml
@@ -5,9 +5,9 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".tapping_gesture.activity.TappingGestureActivityAlarme"
+
     tools:deviceIds="wear"
-    android:background="@color/black"
+    android:background="@color/white"
     >
 
     <TextView
@@ -15,10 +15,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/alerteCockpit"
-        android:textColor="@color/green"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="0dp"
-        android:textSize="30dp"
+        android:textColor="@color/red"
+        android:layout_marginLeft="80dp"
+        android:layout_marginTop="100dp"
+        android:textSize="25dp"
         app:layout_box="all"
         />
 
@@ -32,7 +32,7 @@
         android:layout_height="70dp"
         android:layout_width="60dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="80dp"
         android:background="@color/white"
         android:visibility="invisible"
 
@@ -41,16 +41,17 @@
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_gravity="center_horizontal"
         android:src="@drawable/alerte"
         android:id="@+id/imageAlerte"
-        android:layout_gravity="center"
+
         />
 
 
 
     <Button
         android:id="@+id/buttonTapingAlarme"
-        android:text="finger"
+        android:text=""
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -58,9 +59,10 @@
         android:layout_width="200dp"
         android:layout_marginLeft="80dp"
         android:layout_marginTop="0dp"
+        android:textColor="@color/green"
         android:background="@drawable/button_tapping"
-        android:textColor="@color/green" />
+        />
 
-
+    <!--  -->
 
 </android.support.wearable.view.BoxInsetLayout>
