--- a/wear/src/main/res/layout/tapping_gesture_p2_ok.xml
+++ b/wear/src/main/res/layout/tapping_gesture_p2_ok.xml
@@ -5,7 +5,6 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".tapping_gesture.activity.TappingGestureActivityAlarme"
     tools:deviceIds="wear"
     android:background="@color/black"
     >
@@ -59,7 +58,7 @@
 
     <Button
         android:id="@+id/buttonTapingP2Ok"
-        android:text="finger"
+        android:text=""
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
